--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://linktr.ee/voyagers.st" />
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUIcmlja3JvbGzSBwkJCwoBhyohjO8%3D" />
